# mmark-cli

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  mmark-cli.cabal  stack.yaml
.github/workflows/: ci.yaml  release.yml
app/: Main.hs
