name:                 mmark-cli
version:              0.0.1.0
cabal-version:        >= 1.18
tested-with:          GHC==8.0.2, GHC==8.2.2
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov92@gmail.com>
maintainer:           Mark Karpov <markkarpov92@gmail.com>
homepage:             https://github.com/mmark-md/mmark-cli
bug-reports:          https://github.com/mmark-md/mmark-cli/issues
category:             Categories
synopsis:             Description
build-type:           Simple
description:          Description.
extra-doc-files:      CHANGELOG.md
                    , README.md

source-repository head
  type:               git
  location:           https://github.com/mmark-md/mmark-cli.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

executable mmark
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      base             >= 4.9 && < 5.0
  -- other-modules:      Module
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010
